@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.3-5
-Date: 2014-09-25
-Packaged: 2014-09-25; dylan
+Version: 1.3-6
+Date: 2014-10-27
+Packaged: 2014-10-27; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
