@@ -1,3 +1,6 @@
+-------------------------- soilDB 1.3-6 (2014-10-27) ----------------------------
+* fetchNASIS() gains argument rmHzErrors to optionally retain pedons with horizonation errors. use with caution.
+
 -------------------------- soilDB 1.3-5 (2014-09-25) ----------------------------
 * loafercreek sample dataset re-created from new data
 * seriesExtent() now utilizes pre-cached GeoJSON files from [http://casoilresource.lawr.ucdavis.edu/see/]
